[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/boss.gd" type="Script" id=1]
[ext_resource path="res://assetes/boss.png" type="Texture" id=2]
[ext_resource path="res://sounds/explode.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/spwan.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/not_visbale.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.2027
height = 129.165

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="boss" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 8
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 61.1667, 61.3334 )
rotation = -0.785397
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 65, 62 )
frames = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 6, 9 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 8, 8 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 9, 6.66667 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 9.66667, 5 )

[node name="enemy_sp" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="visibl" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="wait_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( 3.33333, 14.6667 )

[node name="Position2D6" type="Position2D" parent="."]
position = Vector2( 20.3333, 4 )

[node name="Position2D7" type="Position2D" parent="."]
position = Vector2( 43.3333, 15 )

[node name="Position2D8" type="Position2D" parent="."]
position = Vector2( 13, 39.3333 )

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="spwan" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="not_visbl" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="enemy_sp" to="." method="_on_enemy_sp_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="visibl" to="." method="_on_visibl_timeout"]
[connection signal="timeout" from="wait_timer" to="." method="_on_wait_timer_timeout"]
